# InterstellarIntelligence

./: .gitignore  requirements.txt  vcpkg.json
engine/: CMakeLists.txt
engine/src/: main.cpp  utils.cpp  utils.h
engine/src/core/: cli.cpp  cli.h  configs.h  orchestrator.cpp  orchestrator.h
engine/src/models/: space_models.cpp  space_models.h
engine/src/simulation/: actions.cpp  actions.h  models.cpp  models.h  simulation.cpp  simulation.h  solver.cpp  solver.h  strategies.h  world.cpp  world.h
engine/src/utils/: helpers.h  math.h  matrix.cpp  matrix.h  types.h
src/: calculation.py  equations.py  main.py  saved_variables.pkl  submission.py  test.py  updated.py
src/AutoGrader/: actual_solution.py  autograder.py  test.py
